# argos3-examples

./: .gitignore  CMakeLists.txt  README  archiever.py  automation.py  foraging.txt  multiprocess.py  plotting.py  todo.txt  xml_edit.py
alt_xmls/: aggregation_one.xml  output.xml
controllers/: CMakeLists.txt
controllers/footbot_RnB_test/: CMakeLists.txt  footbot_RnB_test.cpp  footbot_RnB_test.h
controllers/footbot_aggregation_one/: CMakeLists.txt  footbot_aggregation_one.cpp  footbot_aggregation_one.h
controllers/footbot_basictest/: CMakeLists.txt  footbot_basictest.cpp  footbot_basictest.h
controllers/footbot_diffusion/: footbot_diffusion.cpp
experiments/: RnB_test.argos  aggregation_one.argos  basictest_1.argos  diffusion_1.argos  foraging.argos  id.argos
loop_functions/: CMakeLists.txt
loop_functions/aggregation_loop_functions/: CMakeLists.txt  aggregation_loop_function.cpp  aggregation_loop_function.h  aggregation_loop_functions.cpp  aggregation_loop_functions.h  aggregation_user_functions.cpp  aggregation_user_functions.h
loop_functions/foraging_loop_functions/: CMakeLists.txt  foraging_loop_functions.cpp
loop_functions/id_loop_functions/: id_qtuser_functions.cpp
recorded_experiments/in_zone_at_end_1/: agg_1.ModifiedArgos  agg_10.ModifiedArgos  agg_2.ModifiedArgos  agg_3.ModifiedArgos  agg_4.ModifiedArgos  agg_5.ModifiedArgos  agg_6.ModifiedArgos  agg_7.ModifiedArgos  agg_8.ModifiedArgos  agg_9.ModifiedArgos  dat_1.csv  dat_10.csv  dat_2.csv  dat_3.csv  dat_4.csv  dat_5.csv  dat_6.csv  dat_7.csv  dat_8.csv  dat_9.csv
recorded_experiments/in_zone_at_end_2/: agg_1.ModifiedArgos  agg_10.ModifiedArgos  agg_2.ModifiedArgos  agg_3.ModifiedArgos  agg_4.ModifiedArgos  agg_5.ModifiedArgos  agg_6.ModifiedArgos  agg_7.ModifiedArgos  agg_8.ModifiedArgos  agg_9.ModifiedArgos  dat_1.csv  dat_10.csv  dat_2.csv  dat_3.csv  dat_4.csv  dat_5.csv  dat_6.csv  dat_7.csv  dat_8.csv  dat_9.csv
recorded_experiments/in_zone_at_end_3/: agg_1.ModifiedArgos  agg_10.ModifiedArgos  agg_2.ModifiedArgos  agg_3.ModifiedArgos  agg_4.ModifiedArgos  agg_5.ModifiedArgos  agg_6.ModifiedArgos  agg_7.ModifiedArgos  (+12 more)
(+20 files in other folders)
